--- a/resume.html
+++ b/resume.html
@@ -17,7 +17,7 @@
                     <div class="designation" contenteditable="true">Designation</div>
                     <hr>
                     <div class="description" contenteditable="true">Full Stack Web Developer</div>
-                    <div class="content-item">
+                    <div class="contact-item">
                         <a href="https://www.linkedin.com/saurabh-awasthi-682347156" target="_blank"> <img  class="icon"src="linkedIn.png" alt="Linked In"></a>
                         <a href="https://github.com/GabruGG" target="_blank"> <img class="icon" src="github.png" alt="Git Hub"></a>
                         <h1 class="skills">Skills</h1>
@@ -38,8 +38,11 @@
         
         <section class="right-section">
             <div class="right-main-content"> 
+                <section>
                 <h1 class="right-title">About Me</h1>
                 <p class="para" contenteditable="true">Write about yourself, like your areas of interest and your hobbies etc.</p>
+                </section>
+                <section>
                 <h1 class="right-title">Education</h1>
                 <h3>10</h3>
                 <p class="para" contenteditable="true">About your class 10 schooling.</p>
@@ -50,8 +53,11 @@
                 <h3>Post graduation(If any)</h3>
                 <p class="para" contenteditable="true">About your post graduation.</p>
                 <h1 class="right-title">Experience</h1>
+                </section>
+                <section>
                 <h3>Experience type</h3>
                 <p class="para" contenteditable="true">About the type of Experience.</p>
+                </section>
             </div>
         </section>
     </main>
